devops/k8s/purchase-request-workflow-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchase-request-workflow-service
  namespace: devops-ssd-assignment
  labels:
    app: purchase-request-workflow-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: purchase-request-workflow-service
  template:
    metadata:
      labels:
        app: purchase-request-workflow-service
    spec:
      containers:
        - name: app
          image: purchase-request-workflow-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
