devops/k8s/purchase-request-workflow-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: purchase-request-workflow-service
  namespace: devops-ssd-assignment
spec:
  selector:
    app: purchase-request-workflow-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
