devops/k8s/purchase-request-workflow-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: purchase-request-workflow-service
  namespace: devops-ssd-assignment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: purchase-request-workflow-service.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: purchase-request-workflow-service
                port:
                  number: 80
